# marchenko-pastur

./: README.md  pyproject.toml
marchenko_pastur/src/: main.py
