[tool.poetry]
name = "marchenko-pastur"
version = "0.1.0"
description = ""
authors = ["Johnny <jl.johnnylowe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
